--- a/index.html
+++ b/index.html
@@ -88,13 +88,13 @@
 
                 <h2 class="section-title">ABOUT</h2>
 
-                <div class="about-contents">
+                <div class="about-contents fadein">
     
-                    <div class="about-img fadein">
+                    <div class="about-img">
                         <img class="shadow" src="img/about.jpg" alt="">
                     </div>
 
-                    <div class="about-text fadein">
+                    <div class="about-text">
                         <h3 class="sub-title">洗練された空間で<br>あなただけのやすらぎを</h3>
                         <p class="text">Les mubleは、流行りやデザインにとらわれず、穏やかなやすらぎが広がり、五感を研ぎ澄ませる洗練された空間をご提案いたします。
                             <br>モダンな家具とヴィンテージの家具の調和、照明の演出、アートの重なり合いによる、あなただけの特別な空間を作り上げます。
@@ -349,7 +349,7 @@
                     </div>
 
                     <div class="form">
-                        <p>メールアドレス<span> ※確認用</span></p>
+                        <p class="sub-text1">メールアドレス</p>
                         <input class="contact-form" type="text">
                     </div>
 
@@ -359,15 +359,14 @@
                     </div>
 
                     <div class="form">
-                        <p>お問い合わせ種別<span> ※複数選択可</span></p>
+                        <p class="sub-text2">お問い合わせ種別</p>
                         <div class="checkbox-inner">
-                            <input class="checkbox" type="checkbox">店舗デザイン
-                            <input class="checkbox" type="checkbox">リノベーション
-                            <input class="checkbox" type="checkbox">製品
-                            <input class="checkbox" type="checkbox">ご来店
-                            <br>
-                            <input class="checkbox" type="checkbox">求人　　　　
-                            <input class="checkbox" type="checkbox">その他
+                            <label for=""><input type="checkbox">店舗デザイン</label>
+                            <label for=""><input type="checkbox">リノベーション</label>
+                            <label for=""><input type="checkbox">商品</label>
+                            <label for=""><input type="checkbox">ご来店</label>
+                            <label for=""><input type="checkbox">求人</label>
+                            <label for=""><input type="checkbox">その他</label>
                         </div>
                     </div>
 
@@ -409,9 +408,9 @@
             </ul>
 
             <ul class="SNS-list">
-                <li><a href="https://www.instagram.com/" class="icon"><img src="img/Instagram_Glyph_Black.png" alt=""></a></li>
-                <li><a href="https://www.instagram.com/" class="icon"><img src="img/Instagram_Glyph_Black.png" alt=""></a></li>
-                <li><a href="https://www.instagram.com/" class="icon"><img src="img/Instagram_Glyph_Black.png" alt=""></a></li>
+                <li><a href="https://twitter.com/?lang=ja" class="icon"><img class="sns-icon" src="img/logo1.png" alt=""></a></li>
+                <li><a href="https://ja-jp.facebook.com/" class="icon"><img class="sns-icon" src="img/logo2.png" alt=""></a></li>
+                <li><a href="https://www.instagram.com/" class="icon"><img class="sns-icon" src="img/logo3.png" alt=""></a></li>
 
             </ul>
 
