--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>ryo furniture</title>
+    <title>Les meuble</title>
     <meta name="description" content="洗練された空間であなただけのやすらぎを・・・">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="">
